# stock-market-crashes

./: README.md  homological_derivative.py  main.py  plotting.py  pyproject.toml  requirements.txt
