[project]
name = "stock-market-crashes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "giotto-tda>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "yfinance>=1.2.1",
]
